Add context and scaffold identity

--- a/EweForum.Core/EweForum.Core.csproj
+++ b/EweForum.Core/EweForum.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EweForum.Infrastructure\EweForum.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
