--- a/EweForum/appsettings.json
+++ b/EweForum/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EweForumContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EweForum;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
