--- a/EweForum/EweForum.csproj
+++ b/EweForum/EweForum.csproj
@@ -7,12 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Views\Account\Login.cshtml" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.27" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.27" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.27" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.27" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.27">
       <PrivateAssets>all</PrivateAssets>
@@ -23,10 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EweForum.Core\EweForum.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Views\Account\Login.cshtml" />
   </ItemGroup>
 
 </Project>
