--- a/EweForum/appsettings.json
+++ b/EweForum/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-Q261QP7;Database=EweForum;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-Q261QP7;Database=EweForum;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "EweForumContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EweForum;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
