--- a/EweForum.Core/EweForum.Core.csproj
+++ b/EweForum.Core/EweForum.Core.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.27" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.27" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EweForum.Infrastructure\EweForum.Infrastructure.csproj" />
   </ItemGroup>
 
