Fix pagination in manage users from specified topic and fix some css

--- a/EweForum/EweForum.csproj
+++ b/EweForum/EweForum.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\EweForum.Utilites\EweForum.Utilites.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Users\" />
+  </ItemGroup>
+
 </Project>
